--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ language: python
 python:
   - "3.3"
   - "3.4"
+  - "3.5"
 
 install:
   - pip install -e .
   - pip install pep8
 
 script: make test
+
+sudo: false
