--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: python
 
 python:
-  - "3.3"
-  - "3.4"
+  - '3.3'
+  - '3.4'
+  - '3.5'
 
 install:
   - pip install -e .
-  - pip install pep8
+  - pip install -r requirements_dev.txt
 
-script: make test
+script:
+  - py.test --cov russell
+  - pylint -f text russell
 
 sudo: false
