--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
 # python
-*.egg-info
-*.pyc
 __pycache__
-
-# virtualenv/pip
-/bin
-/dist
-/include
-/lib
+*.pyc
 /pip-selfcheck.json
-/share
+*.egg-info
 
 # pytest
 /.cache
 /.coverage
+
+# virtualenv
+/.venv
+/.virtualenv
+/bin
+/dist
+/include
+/lib
+/lib64
+/share
