--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ python:
   - '3.3'
   - '3.4'
   - '3.5'
+  - '3.6'
 
 install:
   - pip install -e .
-  - pip install -r requirements_dev.txt
+  - pip install -r requirements-dev.txt
 
 script:
-  - py.test --cov russell
-  - pylint -f text russell
+  - pytest
+  - pylint -E russell
 
 sudo: false
