--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -r requirements-dev.txt
 
 script:
-  - py.test
+  - py.test --runslow
   - pylint -E russell
 
 sudo: false
