--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: python
+dist: xenial
 
 python:
-  - '3.4'
   - '3.5'
   - '3.6'
+  - '3.7'
 
 install:
   - pip install -e .
-  - pip install -r requirements-dev.txt
+  - pip install --upgrade -r requirements-dev.txt
 
 script:
   - py.test
