--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install --upgrade -r requirements-dev.txt
 
 script:
-  - black --check russell
+  - black --check .
   - pylint -E russell
   - pytest
 
