cache pip directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,14 @@ branches:
 dist: xenial
 sudo: false
 language: python
+cache:
+  pip: true
+
 python:
   - '3.8'
   - '3.7'
   - '3.6'
   - '3.5'
-
 install: pip install -e . --upgrade pytest
 script: pytest
 
