--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,6 +4,7 @@ name: run-tests
   push:
     branches:
       - master
+      - develop
     tags:
       - '**'
   pull_request:
@@ -18,10 +19,10 @@ jobs:
     strategy:
       matrix:
         python-version:
-          - '3.6'
-          - '3.7'
           - '3.8'
           - '3.9'
+          - '3.10'
+          - '3.11'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
