--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,7 +24,6 @@ jobs:
           - '3.12'
           - '3.13'
           - '3.14'
-          - '3.15'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -38,6 +37,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+      - uses: astral-sh/setup-uv@v7
       - run: uv run black --check .
 
   ruff:
@@ -45,4 +45,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+      - uses: astral-sh/setup-uv@v7
       - run: uv run ruff check .
