--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,11 @@ authors = [
 ]
 
 dependencies = [
-    "feedgen>=0.9,<1",
-    "jinja2>=2.8,<4",
-    "markdown>=2.6,<4",
-    "python-dateutil>=2.6,<3",
-    "python-slugify>=1.2,<5",
+    "feedgen ~= 1.0",
+    "jinja2 ~= 3.0",
+    "markdown ~= 2.6",
+    "python-dateutil ~= 2.6",
+    "python-slugify ~= 8.0",
 ]
 
 [project.urls]
