--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -42,7 +42,7 @@ jobs:
       - uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
-      - run: uv tool run black --check .
+      - run: uvx black --check .
 
   ruff:
     runs-on: ubuntu-latest
@@ -52,4 +52,4 @@ jobs:
       - uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
-      - run: uv tool run ruff check .
+      - run: uvx ruff check .
