--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ authors = [
 dependencies = [
     "feedgen ~= 1.0",
     "jinja2 ~= 3.0",
-    "markdown ~= 2.6",
+    "markdown ~= 3.3",
     "python-dateutil ~= 2.6",
     "python-slugify ~= 8.0",
 ]
@@ -42,13 +42,7 @@ russell = "russell.cli:main"
 
 [dependency-groups]
 dev = [
-    "black>=25.12.0",
-    "pylint>=4.0.4",
-    "pytest>=9.0.2",
-    "pytest-cov>=7.0.0",
-    "ruff>=0.14.9",
-    "build>=1.0",
-    "twine>=6.0",
+    "pytest ~= 9.0",
 ]
 
 [tool.pytest]
