--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -16,8 +16,8 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     environment:
-      name: pypi
-      url: https://pypi.org/p/russell
+      name: pypi-test
+      url: https://test.pypi.org/p/russell
     permissions:
       id-token: write
     steps:
