--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -1,10 +1,10 @@
-name: publish-pypi-test
+name: publish-pypi
 
 on:
-  push:
-    branches:
-      - master
-      - develop
+  release:
+    types:
+      - published
+
 
 permissions:
   contents: read
@@ -13,8 +13,8 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     environment:
-      name: pypi-test
-      url: https://test.pypi.org/p/russell
+      name: pypi
+      url: https://pypi.org/p/russell
     permissions:
       id-token: write
     steps:
@@ -27,5 +27,3 @@ jobs:
     - run: uv build
     - name: Publish package distributions to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: https://test.pypi.org/legacy/
